--- a/web_client_workspace/kisen/sample.html
+++ b/web_client_workspace/kisen/sample.html
@@ -1,9 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>로그인</title>
-
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 
 <!-- bootstrap js: jquery load 이후에 작성할것.-->
@@ -13,17 +7,8 @@
 <!-- bootstrap css -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
-<SCRIPT src="http://dmaps.daum.net/map_js_init/postcode.v2.js"></SCRIPT>
+<link href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css'>
+<script src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js'></script>
+<link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 
-<input type="radio" id="aaa" name="abcd" value="00" onchange="setDisplay()"> AAA
-<input type="radio" id="bbb" name="abcd" value="10" onchange="setDisplay()"> BBB
-
-<script>
-function setDisplay(){
-  if($('input:radio[id=aaa]').is(':checked')){
-      $('#divId').hide();
-  }else{
-      $('#divId').show();
-  }
-}
-</script>
