--- a/web_client_workspace/kisen/fanBoardDetail.html
+++ b/web_client_workspace/kisen/fanBoardDetail.html
@@ -12,6 +12,13 @@
 <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 
+<!-- 댓글창 높이 자동조절 -->
+<script>
+function resize(obj) {
+    obj.style.height = '1px';
+    obj.style.height = (12 + obj.scrollHeight) + 'px';
+}
+</script>
 <!-- 사용자작성 css -->
 <link rel="stylesheet" href="css/fanBoardAndNoticeDetail.css" />
 <div class="move col-10">
@@ -26,7 +33,7 @@
         <div class="container">
           <p class="display-4 title">블랙핑크 컴백한답니다!</p>
           <div class="left-container">
-                  <span class="writer lead">honggd</span>
+                  <span class="writer lead">honggd</span>&nbsp;
                   <span class="lead user-role">일반 사용자</span>
                   <br>
               <span class="enroll-date lead">2020-06-09</span>&nbsp;
@@ -69,10 +76,14 @@
         <div class="d-flex justify-content-center row">
             <div class="d-flex flex-column comment-container">
                 <div class="coment-bottom">
-                    <div class="d-flex flex-row add-comment-section mt-4 mb-4">
-                      <input type="text" class="form-control mr-3" placeholder="댓글을 남겨보세요">
-                      <button class="btn btn-outline-secondary" type="button">댓글</button>
+                    <div class="add-comment-section mt-4 mb-4">
+                      <p class="comment-writer">honggd</p>
+                      <textarea id="newTweetContent" placeholder="댓글을 남겨보세요." onkeydown="resize(this)" onkeyup="resize(this)"></textarea>
+                      <div class="comment-submit-div">
+                      <input type="submit" class="comment-submit"value="등록">
                     </div>
+                  </div>
+                  <br>
                     <!-- 각각의 댓글 -->
                     <div class="commented-section mt-2">
                         <div class="d-flex flex-row align-items-center commented-user">
@@ -85,11 +96,34 @@
                               <i class="fa fa-sort-down fa-2x mb-3 hit-voting"></i>
                               <span class="ml-2">10</span>
                               <span class="dot ml-2"></span>
-                                <h6 class="ml-2 mt-1">Reply</h6>
+                              <h6 class="ml-2 mt-1"  onclick="enrollComment2()">답글쓰기</h6>
                             </div>
                         </div>
                     </div>
-                    <hr>
+                    <!-- 댓글에 대한 답글 쓰기 -->
+                    <div class="add-comment-section comment-level2-enroll mt-4 mb-4">
+                      <p class="comment-writer">honggd</p>
+                      <textarea id="newTweetContent" placeholder="답글을 남겨보세요." onkeydown="resize(this)" onkeyup="resize(this)"></textarea>
+                      <div class="comment-submit-div">
+                      <input type="submit" class="comment-submit" onclick="cancelEnrollComment2()" value="취소">
+                      <input type="submit" class="comment-submit" value="등록">
+                    </div>
+                    </div>
+                    <hr style="width: 93%;">
+                    <!-- 답글 -->
+                    <div class="commented-section comment-level2 mt-2">
+                      <div class="d-flex flex-row align-items-center commented-user">
+                          <h5 class="mr-2">honggd</h5><span class="dot mb-1"></span><span class="mb-1 ml-2">4 hours ago</span>
+                      </div>
+                      <div class="comment-text-sm"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span></div>
+                      <div class="reply-section">
+                          <div class="d-flex flex-row align-items-center voting-icons">
+                              <i class="fa fa-sort-up fa-2x mt-3 hit-voting"></i>
+                              <i class="fa fa-sort-down fa-2x mb-3 hit-voting"></i>
+                          </div>
+                      </div>
+                  </div>
+                  <hr>
                     <!-- 각각의 댓글 -->
                     <div class="commented-section mt-2">
                         <div class="d-flex flex-row align-items-center commented-user">
@@ -102,7 +136,7 @@
                                 <i class="fa fa-sort-down fa-2x mb-3 hit-voting"></i>
                                 <span class="ml-2">10</span>
                                 <span class="dot ml-2"></span>
-                                <h6 class="ml-2 mt-1">Reply</h6>
+                                <h6 class="ml-2 mt-1"  onclick="enrollComment2()">답글쓰기</h6>
                             </div>
                         </div>
                     </div>
@@ -113,10 +147,90 @@
     </div>
 </div>
 </div>
+<div class="move col-10">
+    <button class="move-btn board-enroll-btn" name="prev-board">글쓰기</button>
+    <button class="move-btn" name="prev-board" id="topBtn">▲ TOP</button>
+    <button class="move-btn" name="list-board">목록</button>
+</div>
+<div class="list-container">
+    <p><span>블랙핑크</span> 게시판 글</p>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active list-li board-nav">
+              <button class="nav-btn" id="board-nav-btn" onclick="clickBoardNav()">팬게시판</button>
+            </li>
+            <li class="nav-item list-li notice-nav">
+              <button class="nav-btn" id="notice-nav-btn" onclick="clickNoticeNav()">공지사항</button>
+            </li>
+          </ul>
+        </div>
+      </nav>
+<table class="list-table table">
+    <tbody>
+      <tr>
+        <td style="width: 60%;" class="">Mark</td>
+        <td>Otto</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <td style="width: 60%;" class="">Jacob</td>
+        <td>Thornton</td>
+        <td>@mdo</td>
+      </tr>
+      <tr>
+        <td style="width: 60%;" class="">Larry</td>
+        <td>the Bird</td>
+        <td>@mdo</td>
+      </tr>
+    </tbody>
+  </table>
 
+  <div class="paging-bar">
+  <nav aria-label="Page navigation">
+    <ul class="pagination">
+      <li class="page-item">
+        <a class="page-link" href="#" aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+          <span class="sr-only">Previous</span>
+        </a>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item">
+        <a class="page-link" href="#" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+          <span class="sr-only">Next</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
+</div>
 <script>
+var topEle = $('#topBtn');
+var delay = 1000;
+topEle.on('click', function() {
+  $('html, body').stop().animate({scrollTop: 0}, delay);
+});
 
-$(function () {
-  $('[data-toggle="popover"]').popover()
-})
+function clickNoticeNav(){
+  document.getElementById("notice-nav-btn").style.borderBottom = "2px solid rgb(85, 53, 70)";
+  document.getElementById("board-nav-btn").style.borderBottom = "none";
+}
+
+function clickBoardNav(){
+  document.getElementById("board-nav-btn").style.borderBottom = "2px solid rgb(85, 53, 70)";
+  document.getElementById("notice-nav-btn").style.borderBottom = "none";
+}
+
+// 답글쓰기
+function enrollComment2(){
+    $(".comment-level2-enroll").show();
+}
+
+function cancelEnrollComment2(){
+  $(".comment-level2-enroll").hide();
+}
 </script>
